--- a/c1541/TODO.txt
+++ b/c1541/TODO.txt
@@ -7,5 +7,49 @@
 		vdrive_bam_get_interleave
 	>> Either create a tool to produce all the different 256 byte blocks from a file...
 	>> Or update C1541 to set the interleave based on a command...
+		> command_list in src\c1541.c
+* Validate: c:\work\C1541-Tweaks\c1541\Debug\c1541.exe -attach test2.d64 -chain "screen1"
+	(17, 8) -> (17, 9) -> (17,10) -> (17,11) -> 241
 
+* Testing in Vice x64sc
+	break 803b
+		= C64\IRQDisk\TestIRQDisk.a : .repeatLoad
+	x (run through a whole load cycle once)
+	sw reset
+	x
+	sw
 
+	-interleave 1
+	27302316	(cycles between breakpoint at 803b)
+
+	-interleave 2
+	28205313
+
+	-interleave 3
+	29265260
+
+	-interleave 4
+	30408933
+
+	-interleave 5
+	31457078
+
+	-interleave 6
+	32593692
+
+	-interleave 7
+	33853370
+
+	-interleave 8
+	33480059
+
+	-interleave 9
+	34598036
+
+	-interleave 10
+	35951278
+
+	-interleave 11
+	37983312
+
+	>> In emulation at least the "-interleave 1" option produces a much faster loading disk
