--- a/c1541/TODO.txt
+++ b/c1541/TODO.txt
@@ -1,17 +1,14 @@
 ; -attach test2.d64 -format test,67 -write TestIRQDisk.prg testirqdisk -write screen1.prg screen1 -write screen2.prg screen2 -write screen3.prg screen3 -write TESTSAVE.PRG testsave
 ; C:\Work\C64\IRQDisk
 
-* Using this file: "E:\C64_Preservation_Project_10th_Anniversary_Collection_G64\c64pp-g64-zip\f\flying_shark[firebird_1987](pal)(!).g64"
-	The info command incorrectly displays 35 tracks, there are actually 39
-		disk format  : 1541
-		track count  : 35
-		error block  : No
-		write protect: Off
-	> Using: https://ist.uwaterloo.ca/~schepers/formats/G64.TXT
-	> Use result from: image->tracks
-		>> image->tracks = header[9] / 2;
-
-
-
 * Enhance bpeek / bpoke to handle raw GCR bytes
 	Or create gcrpeek / gcrpoke alternatives
+
+
+
+* When using "flying_shark[firebird_1987](pal)(!).g64" and trying to bpeek 38 0 it doesn't report the error, it would be useful to show that
+	fsimage_gcr_read_sector
+	if (rf != CBMDOS_FDC_ERR_OK)
+	>> if (vdrive_read_sector(vdrive, buffer, track, sector) != 0) {
+		bpeek_cmd
+	> When there is an image, it also shows: image tracks : xxx
