--- a/c1541/TODO.txt
+++ b/c1541/TODO.txt
@@ -4,3 +4,8 @@
 * Add comand to interrogate the image for available raw data and GCR blocks
 	Like BAM but better.
 
+
+
+
+* Recover command ignores active files in the directory.
+	Ignores what the "extract" command would write.
