--- a/c1541/TODO.txt
+++ b/c1541/TODO.txt
@@ -3,3 +3,9 @@
 
 * Add comand to interrogate the image for available raw data and GCR blocks
 	Like BAM but better.
+
+
+
+* Sometimes the data from the -recover command seems to have random unitialised data from teh PC string buffer?
+	Make sure the buffer is cleared before the attempted disk read.
+	
